# permutator

./: .gitignore  CMakeLists.txt  FindGUROBI.cmake  README.md  data  target-runner-pbs  test-EVRP-manager  test-ROADEF-manager  test-runner  tuning.sh
configs/: CVRP_config.json  CVRP_final_2.json  CVRP_final_3.json  EVRP.json  EVRP_no_repair.json  EVRP_repair.json  NN_demo.json  NPFS.json  NPFS_config.json  NPFS_final_1.json  NPFS_final_2.json  QAP_config.json  QAP_debug.json  QAP_final_1_fail.json  QAP_final_2.json  QAP_final_3.json  SCP_config_greedy.json  SCP_config_opt.json  SCP_config_opt_random.json  SCP_config_random.json  SUDOKU.json  SUDOKU_config.json  SUDOKU_final_1.json  TSPSD_config_greedy.json  TSPSD_config_opt_random.json  TSPSD_config_random.json  TSPSD_greedy.json  bvns_demo_config.json  cvrp_final_2.json  default.json  default_config.json  ils_demo_config.json  insert_config.json  qap_final_2.json
configs/EA/: ROADEF.json  test.json
configs/LS/: EVRP.json  NPFS.json  QAP.json  ROADEF.json  TSPSD_greedy.json  TSPSD_random.json
configs/testconfigs/: EVRP-AEX.json  EVRP-APX.json  EVRP-CX.json  EVRP-EA.json  EVRP-ERULX.json  EVRP-ERX.json  EVRP-EULX.json  EVRP-HGreX.json  EVRP-HProX.json  EVRP-HRndX.json  EVRP-LS.json  EVRP-MPX.json  EVRP-NBX.json  EVRP-OBX.json  EVRP-OX.json  EVRP-PBX.json  EVRP-RULX.json  EVRP-SPX.json  EVRP-ULX.json  EVRP-UPMX.json  NBX.json  ROADEF-AEX.json  ROADEF-CX.json  ROADEF-ERULX.json  ROADEF-ERX.json  ROADEF-EULX.json  ROADEF-HGreX.json  ROADEF-HProX.json  ROADEF-HRndX.json  ROADEF-LS .json  ROADEF-MPX.json  ROADEF-NBX.json  ROADEF-OBX.json  ROADEF-OX.json  ROADEF-PBX.json  ROADEF-RULX.json  ROADEF-SPX.json  ROADEF-ULX.json  ROADEF-UPMX.json
data/: cvns_demo_config.json  default_config.json  ils_demo_config.json
data/cvrp/: cvrp-10_BKSs.json
data/cvrp-10/: A-n65-k09.xml  X-n148-k46.xml  X-n204-k19.xml  X-n749-k98.xml
data/cvrp-augerat-A/: A-n34-k05.xml  A-n38-k05.xml  A-n39-k05.xml  A-n39-k06.xml  A-n45-k07.xml  A-n53-k07.xml  A-n54-k07.xml  A-n61-k09.xml  A-n63-k09.xml
data/cvrp-augerat-P/: P-n016-k08.xml  P-n019-k02.xml  P-n020-k02.xml  P-n022-k02.xml  P-n022-k08.xml  P-n023-k08.xml  P-n050-k07.xml  P-n055-k08.xml  P-n060-k15.xml  P-n070-k10.xml  P-n076-k04.xml  P-n076-k05.xml
data/cvrp-uchoa/: X-n1001-k43.xml  X-n101-k25.xml  X-n106-k14.xml  X-n110-k13.xml  X-n115-k10.xml  X-n120-k6.xml  X-n125-k30.xml  X-n129-k18.xml  X-n134-k13.xml  X-n139-k10.xml  X-n143-k7.xml  X-n153-k22.xml  X-n157-k13.xml  X-n162-k11.xml  X-n167-k10.xml  X-n172-k51.xml  X-n176-k26.xml  X-n181-k23.xml  X-n186-k15.xml  X-n190-k8.xml  X-n195-k51.xml  X-n200-k36.xml  X-n209-k16.xml  X-n214-k11.xml  X-n219-k73.xml  X-n223-k34.xml  X-n228-k23.xml  X-n233-k16.xml  X-n237-k14.xml  X-n242-k48.xml  X-n247-k47.xml  X-n251-k28.xml  X-n256-k16.xml  X-n261-k13.xml  X-n266-k58.xml  X-n270-k35.xml  X-n275-k28.xml  X-n280-k17.xml  X-n284-k15.xml  X-n289-k60.xml  (+58 more)
data/npfs-vfr/: npfs-10_BKSs.json
data/qap/: qap-10_BKSs.json
data/sudoku/: sudoku-10_BKSs.json
data/tsp/: berlin52.json  vm1084.json  vm1084.tsp
demo/: pwr_demo.sh  test_cvrp.sh  test_db.sh  test_qap.sh
lib/getopt/: getopt.h
log/evrp/: test.out
log/scp-meta/: solution.out
log/wcp-meta/: solution.out
scripts/CVRP/: CVRP_ilp.sh  CVRP_large.sh  CVRP_medium.sh  CVRP_small.sh
scripts/EVRP/: EVRP_all.sh  tunnig.sh
scripts/NPFS/: NPFS_ilp.sh  NPFS_large.sh  NPFS_medium.sh  NPFS_small.sh
scripts/QAP/: QAP_ilp.sh  QAP_large.sh  QAP_medium.sh  QAP_single.sh  QAP_small.sh
scripts/SD/: evaluate_solutions.py  fix_logs.py  fix_routes.py  generate_random_tspsd.py  non_ham_sufficient_test.py  plot_bw_cutoff.py  plot_ham_bounds.py  plot_multiple_bw_cutoffs.py  plot_progress.py  plot_sigmoid_bounds.py  process_meta_results.py  run_plot_fitness.sh  run_plot_progress.sh  tsp2json.py  tsp2tspsd_random_ov.py
scripts/SUDOKU/: SUDOKU_ilp.sh  SUDOKU_large.sh  SUDOKU_medium.sh  SUDOKU_small.sh
scripts/TSPSD/: TSPSD.py  TSPSD.sh  TSPSD_init.py  fast_TSPSD.py  fast_wTSPSD.py
scripts/common/: create_config.py  data_process.py  draw_boxplots.py  process_ilp_results.py  process_meta_results.py  rename_files_dirs.sh  replace_in_files.sh  tuning-EVRP.sh  tuning-ROADEF.sh
scripts/cvrp/: cvrp_ilp.sh  cvrp_large.sh  cvrp_medium.sh
src/: config.cpp  config.hpp  utils.hpp
tests/: cvrp_ilp.sh  cvrp_large.sh  cvrp_medium.sh  cvrp_small.sh  fast_scp.py  fast_wcp.py  misc.sh  npfs_ilp.sh  npfs_large.sh  npfs_medium.sh  npfs_small.sh  qap_ilp.sh  qap_large.sh  qap_medium.sh  qap_single.sh  qap_small.sh  scp.py  scp.sh  scp_init.py  sudoku_large.sh  sudoku_medium.sh  sudoku_small.sh  tspsd.sh  wcp.sh  wcp_init.py
tools/: create_config.py  cvrp_ilp.cpp  cvrp_meta.cpp  evrp_meta.cpp  npfs_ilp.cpp  npfs_meta.cpp  process_ilp_results.py  process_meta_results.py  qap_ilp.cpp  qap_meta.cpp  scp_meta.cpp  sudoku_ilp.cpp  sudoku_meta.cpp  tspsd_meta.cpp  wcp_meta.cpp
tuning/: forbidden.txt  irace.Rdata  parameters.txt  scenario.txt  target-runner
tuning_CVRP/: configurations.txt  forbidden.txt  instances-list.txt  scenario.txt
tuning_ERVP/: configurations.txt  forbidden.txt  instances-list.txt  irace.Rdata  parameters.txt  target-runner
tuning_EVRP/: configurations.txt  forbidden.txt  irace.Rdata  parameters.txt  target-runner
tuning_EVRP_no_repair/: instances-list.txt  irace.Rdata  target-runner
tuning_EVRP_repair/: configurations.txt  instances-list.txt  irace.Rdata  parameters.txt  scenario.txt  target-runner
tuning_NPFS/: c45-3-790864196.stdout  c90-9-1026813512.stdout  config_156-9-1026813512.json  config_20-9-1026813512.json  config_38-9-1026813512.json  config_45-3-790864196.json  config_90-9-1026813512.json  configurations.txt  forbidden.txt  instances-list.txt  irace.Rdata  parameters.txt  scenario.txt
tuning_QAP/: configurations.txt  forbidden.txt  instances-list.txt  parameters.txt  scenario.txt
tuning_SCP/: configurations.txt  scenario.txt  target-runner  test_run.Rdata
tuning_SUDOKU/: configurations.txt  instances-list.txt  irace.Rdata  parameters.txt  scenario.txt
(+262986 files in other folders)
